--- a/Company.G.BLL/Company.G.BLL.csproj
+++ b/Company.G.BLL/Company.G.BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Company.G.DAL\Company.G.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
