Create Department Controller and Allow DI for all Services

--- a/Company.G.PL/appsettings.json
+++ b/Company.G.PL/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-QBP9RUO\\SQLEXPRESS;Database=Company_G;Trusted_Connection=True;TrustServerCertificate=True"
+    },
+    "AllowedHosts": "*"
 }
